# backquote

./: .eslintrc  .gitignore  .travis.yml  Procfile  README.md  package.json  requirements.txt  server.js  webpack.config.js
backtester/: README.md  backtester.cpp  backtester.sln  backtester.vcxproj.filters
backtester/GenerateUltimateFile/: GenerateUltimateFile.cpp  GenerateUltimateFile.sln  GenerateUltimateFile.vcxproj  GenerateUltimateFile.vcxproj.filters  stdafx.cpp
backtester/algorithms/: Algorithm.h  Simple.cpp  Simple.h
backtester/backtester/: CMakeLists.txt  README.md  TickerBacktester.cpp  TickerBacktester.h  backtester.cpp  backtester.vcxproj  backtester.vcxproj.filters  stdafx.cpp  stdafx.h
backtester/backtester/algorithms/: Algorithm.cpp  Algorithm.h  Simple.cpp  Simple.h
backtester/backtester/algorithms/configs/: simple.json
backtester/backtester/models/: action.h  day.h  models.h  quote.h  result.cpp  result.h  status.h  stdafx.h  trade.cpp  trade.h
backtester/backtester/utilities/: constants.h
client/: api.js  index.js  index.tpl.html  routes.js
client/actions/: algorithms.js  backtests.js  dailyResult.js  days.js  simulation.js  simulations.js  stats.js  templates.js  tickers.js  types.js
client/components/: App.js  Backtest.js  BacktestRow.js  BacktestsList.js  Breadcrumbs.js  Controls.js  DailyResult.js  DailyResultChart.js  Dashboard.js  (+14 more)
db/: copy_quotes.sql  init.sql  schema.sql  seed.sql  setup.sh  setup_docker_db.sh  tables_FK_constraints.sql  upload_quotes.py
server/: .env  app.py  config.py  models.py  upload.py  utils.py
(+48 files in other folders)
